[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 215.0
margin_top = 75.0
margin_right = 260.0
margin_bottom = 153.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="Missatge" type="Label" parent="."]
margin_left = 56.0
margin_top = 285.0
margin_right = 435.0
margin_bottom = 444.0
rect_pivot_offset = Vector2( 692, 504 )
custom_fonts/font = SubResource( 1 )
text = "Dodge the
Creeps!"
align = 1
autowrap = true

[node name="StartButton" type="Button" parent="."]
margin_left = 155.0
margin_top = 540.0
margin_right = 335.0
margin_bottom = 640.0
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
